# app/Http/Requests/PackageSaleAddPaymentRequest.php
@@ -1,0 +1,52 @@
+<?php
+
+namespace App\Http\Requests;
+
+use Illuminate\Contracts\Validation\Validator;
+use Illuminate\Foundation\Http\FormRequest;
+use Illuminate\Http\Exceptions\HttpResponseException;
+
+class PackageSaleAddPaymentRequest extends FormRequest
+{
+    /**
+     * Determine if the user is authorized to make this request.
+     *
+     * @return bool
+     */
+    public function authorize()
+    {
+        return true;
+    }
+
+    /**
+     * Get the validation rules that apply to the request.
+     *
+     * @return array<string, mixed>
+     */
+    public function rules()
+    {
+        return [
+            'package_id'=> "required",
+            'price' => "required",
+            'amount' => "required",
+        ];
+    }
+
+    public function attributes()
+    {
+        return [
+            'package_id'=> "Paket ID",
+            'price' => "Fiyat",
+            'amount' => "Adet",
+        ];
+    }
+
+    protected function failedValidation(Validator $validator)
+    {
+        throw new HttpResponseException(response()->json([
+            'status' => 'error',
+            'message' => 'Doğrulama hatası',
+            'errors' => $validator->errors()->all(),
+        ], 422));
+    }
+}
