# routes/api.php
@@ -10,6 +10,7 @@ use \App\Http\Controllers\Api\BusinessServiceController;
 use \App\Http\Controllers\Api\PersonalController;
 use App\Http\Controllers\Api\AuthController;
 use \App\Http\Controllers\Api\SetupController;
+use \App\Http\Controllers\Api\PackageSaleController;
 /*
 |--------------------------------------------------------------------------
 | API Routes
@@ -26,13 +27,13 @@ Route::prefix('business')->group(function (){
         Route::post('login', [AuthController::class, 'login']);
         Route::post('check-phone', [AuthController::class, 'register']);
         Route::post('verify', [AuthController::class, 'verify']);
-        Route::middleware('auth:api')->group(function () {
-            Route::get('user', [AuthController::class, 'user']);
-            Route::post('logout', [AuthController::class, 'logout']);
-        });
     });
 
     Route::middleware('auth:business')->group(function () {
+
+        Route::get('user', [AuthController::class, 'user']);
+        Route::post('logout', [AuthController::class, 'logout']);
+
         Route::controller(SetupController::class)->prefix('setup')->group(function (){
             Route::get('/get', 'get');
             Route::post('/update', 'update');
@@ -69,6 +70,18 @@ Route::prefix('business')->group(function (){
             Route::post('/add', 'step3AddPersonal');
             Route::post('/update', 'step3UpdatePersonal');
             Route::post('/delete', 'step3DeletePersonal');
+        });
+
+        Route::controller(PackageSaleController::class)->prefix('package-sale')->group(function (){
+           Route::get('/', 'index');
+           Route::post('/payments', 'payments');
+           Route::post('/usages', 'usages');
+
+           Route::get('/create-packet', 'createPacket');
+           Route::post('/add-packet', 'addPacket');
+           Route::post('/add-payment', 'addPayment');
+           Route::post('/add-usage', 'addUsage');
+
         });
 
 
